--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: retry
-Title: Retry Any Expression or Function
+Title: Retry Any Function
 Version: 0.1
 Date: 2016-03-27
 Author: John A. Ramey
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: A port of the Python package *retrying* to add retry behavior to
-    any R expression or function.
+    any R function.
 Depends:
     R (>= 3.0)
 License: MIT
